--- a/Betotrans/Views/Home/About.cshtml
+++ b/Betotrans/Views/Home/About.cshtml
@@ -3,45 +3,46 @@
 }
 
 @section body{
-        <div class="right">
-            <div class="tekst">
-                <h1 class="ng">O firmie</h1>
-                    <div >
-                        <p class="articleText">
-                            Firma BETO-TRANS powstała w 1987 roku i specjalizuje się w wydobywaniu, uszlachetnianiu i transporcie kruszyw do celów budowlanych, drogowych oraz ogrodniczych. Zajmuje się także budową dróg, świadczy usługi koparką, ładowarką oraz HDS. 
-                        </p>
-                        <a class="fancybox" rel="grupaOFirmie" href="@Url.Content("~/Images/maszyny/koparka_na_zwirowni.JPG")" title="koparka na żwirowni"><img style="margin:15px" src="@Url.Content("~/Images/maszyny/mini/koparka_na_zwirowni_350x222.JPG")" alt="koparka na żwirowni" title="koparka na żwirowni" /></a>
-                        <p class="articleText">
-                            Firma BETO-TRANS współpracuje ze znaczącymi przedsiębiorstwami zajmującymi się produkcją betonów towarowych, prefabrykatów betonowych oraz firmami zajmującymi się układaniem kostki brukowej, wykonywaniem tynków, posadzek jak również świadczeniem usług ogólnobudowlanych. 
-                        </p>
-                        <a class="fancybox" rel="grupaOFirmie" href="@Url.Content("~/Images/maszyny/kopalnia_Korabiewice_3.JPG")" title="kopalnia Korabiewice">
-                            <img style="margin:15px" src="@Url.Content("~/Images/maszyny/mini/kopalnia_Korabiewice_3_350_263.JPG")" alt="kopalnia Korabiewice" title="kopalnia Korabiewice"/>
-                        </a>
-                        
-                        <p class="articleText">
-                            BETO-TRANS świadczy  również usługi dla instytucji państwowych, takich jak:  gminy, leśnictwa, zarządy dróg. 
-                        </p>
-                        <a class="fancybox" rel="grupaOFirmie" href="@Url.Content("~/Images/maszyny/Steyer_przy_odsniezaniu.JPG")" title="Steyer przy odśnieżaniu">
-                            <img style="margin:15px" src="@Url.Content("~/Images/maszyny/mini/Steyer_przy_odsniezaniu_350x233.JPG")" alt="Steyer przy odśnieżaniu" title="Steyer przy odśnieżaniu" />
-                        </a>
-                        <p class="articleText">
-                            BETO-TRANS jest otwarta na  współpracę z klientami indywidualnymi. 
+    <div class="right">
+        <section class="tekst">
+            <h1 class="ng">O firmie</h1>
+            <div>
+                <p class="articleText">
+                    Firma BETO-TRANS powstała w 1987 roku i specjalizuje się w wydobywaniu, uszlachetnianiu i transporcie kruszyw do celów budowlanych, drogowych oraz ogrodniczych. Zajmuje się także budową dróg, świadczy usługi koparką, ładowarką oraz HDS. 
+                </p>
+                <a class="fancybox" rel="grupaOFirmie" href="@Url.Content("~/Images/maszyny/koparka_na_zwirowni.JPG")" title="koparka na żwirowni">
+                    <img style="margin:15px" src="@Url.Content("~/Images/maszyny/mini/koparka_na_zwirowni_350x222.JPG")" alt="koparka na żwirowni" title="koparka na żwirowni" /></a>
+                <p class="articleText">
+                    Firma BETO-TRANS współpracuje ze znaczącymi przedsiębiorstwami zajmującymi się produkcją betonów towarowych, prefabrykatów betonowych oraz firmami zajmującymi się układaniem kostki brukowej, wykonywaniem tynków, posadzek jak również świadczeniem usług ogólnobudowlanych. 
+                </p>
+                <a class="fancybox" rel="grupaOFirmie" href="@Url.Content("~/Images/maszyny/kopalnia_Korabiewice_3.JPG")" title="kopalnia Korabiewice">
+                    <img style="margin:15px" src="@Url.Content("~/Images/maszyny/mini/kopalnia_Korabiewice_3_350_263.JPG")" alt="kopalnia Korabiewice" title="kopalnia Korabiewice"/>
+                </a>
+
+                <p class="articleText">
+                    BETO-TRANS świadczy  również usługi dla instytucji państwowych, takich jak:  gminy, leśnictwa, zarządy dróg. 
+                </p>
+                <a class="fancybox" rel="grupaOFirmie" href="@Url.Content("~/Images/maszyny/Steyer_przy_odsniezaniu.JPG")" title="Steyer przy odśnieżaniu">
+                    <img style="margin:15px" src="@Url.Content("~/Images/maszyny/mini/Steyer_przy_odsniezaniu_350x233.JPG")" alt="Steyer przy odśnieżaniu" title="Steyer przy odśnieżaniu" />
+                </a>
+                <p class="articleText">
+                    BETO-TRANS jest otwarta na  współpracę z klientami indywidualnymi. 
                             Dzięki długoletniej praktyce, doświadczeniu oraz zapleczu technicznym i wykwalifikowanej kadrze pracowniczej 
                             wszystkie zamówienia realizowane są szybko i solidnie. 
                             W razie potrzeby personel firmy chętnie służy radą i jest otwarty na nowe wyzwania jakie stawia ówczesny rynek.
-                        </p>
-                        <a class="fancybox" rel="grupaOFirmie" href="@Url.Content("~/Images/maszyny/zaladunek_kruszywa.JPG")" title="załadunek kruszywa">
-                            <img style="margin:15px" src="@Url.Content("~/Images/maszyny/mini/zaladunek_kruszywa_350x233.JPG")" alt="załadunek kruszywa" title="załadunek kruszywa" />
-                        </a>
-                        <div style="float:none"></div>
-                        <p style="float:right">
-                            Zapraszam do współpracy z firmą BETO-TRANS.<br />
-                            <strong>Z poważaniem:  Józef  Piejak - właściciel</strong>
-                        </p>
-                    </div>
-                    <br />
-                    <div  id="map_canvas" style="width:100%; height:600px">
-                    </div>
+                </p>
+                <a class="fancybox" rel="grupaOFirmie" href="@Url.Content("~/Images/maszyny/zaladunek_kruszywa.JPG")" title="załadunek kruszywa">
+                    <img style="margin:15px" src="@Url.Content("~/Images/maszyny/mini/zaladunek_kruszywa_350x233.JPG")" alt="załadunek kruszywa" title="załadunek kruszywa" />
+                </a>
+                <div style="float: none"></div>
+                <p style="float: right">
+                    Zapraszam do współpracy z firmą BETO-TRANS.<br />
+                    <strong>Z poważaniem:  Józef  Piejak - właściciel</strong>
+                </p>
             </div>
-        </div>
+            <br />
+            <div id="map_canvas" style="width: 100%; height: 600px">
+            </div>
+        </section>
+    </div>
 }
