dane kontaktowe do sprzedazy

--- a/Betotrans/Views/Home/Contact.cshtml
+++ b/Betotrans/Views/Home/Contact.cshtml
@@ -50,6 +50,7 @@
                             96-332 Radziwiłłów <br /><br />
                             ul. Środkowa 38 <br /><br />
                             NIP 836-100-18-87<br /><br />
+                            Sprzedaż: 505 046 395 - Krzysztof Piejak<br /><br />
                             Właściciel: 604 281 572 – Józef Piejak 
                         </p>
                     </div>
