--- a/Betotrans/Views/Home/Offer.cshtml
+++ b/Betotrans/Views/Home/Offer.cshtml
@@ -12,9 +12,9 @@
                              <tr>
                                  <!-- ko foreach: $data -->
                                     <td>
-                                        <a class="fancybox" rel="oferta" data-bind="attr:{title: title, href : src}">
-                                            <img data-bind="attr:{src:miniSrc, alt:title}"/>
-                                            <strong><label data-bind="text:title"/></strong>
+                                        <a data-bind="attr:{title: title, href : url}">
+                                            <img class="offerImage" data-bind="attr:{src:miniSrc, alt:title}"/>
+                                            <strong class="tekst" data-bind="text: title"></strong>
                                         </a>
                                     </td>
                                  <!-- /ko -->
@@ -29,9 +29,9 @@
                              <tr>
                                  <!-- ko foreach: $data -->
                                     <td>
-                                        <a class="fancybox" rel="oferta" data-bind="attr:{title: title, href : src}">
-                                            <img data-bind="attr:{src:miniSrc, alt:title}" />
-                                            <strong><label data-bind="text:title"/></strong>
+                                        <a data-bind="attr: { title: title, href: url }">
+                                            <img class="offerImage" data-bind="attr: { src: miniSrc, alt: title }"/>
+                                            <strong class="tekst" data-bind="text: title"></strong>
                                         </a>
                                     </td>
                                  <!-- /ko -->
@@ -43,16 +43,16 @@
 				<h1 class="ng">Sprzedaż materiałów do celów ogrodniczych</h1>
                  <table class="tabelka" style="width:95%;">
                      <tbody data-bind="foreach: ofertaOgrodniczaWierszeKolumny">
-                         <tr>
-                             <!-- ko foreach: $data -->
-                                <td>
-                                    <a class="fancybox" rel="oferta" data-bind="attr:{title: title, href : src}">
-                                        <img data-bind="attr:{src:miniSrc, alt:title}" />
-                                        <strong><label data-bind="text:title"/></strong>
-                                    </a>
-                                </td>
-                             <!-- /ko -->
-                         </tr>
+                             <tr>
+                                 <!-- ko foreach: $data -->
+                                    <td>
+                                        <a data-bind="attr: { title: title, href: url }">
+                                            <img class="offerImage" data-bind="attr: { src: miniSrc, alt: title }"/>
+                                            <strong class="tekst" data-bind="text: title"></strong>
+                                        </a>
+                                    </td>
+                                 <!-- /ko -->
+                             </tr>
                      </tbody>
 				</table>
                 </section>
@@ -72,33 +72,31 @@
 
 @section scripts{
     <script type="text/javascript">
-
-
         var OfertaImageViewModel = function () {
             var self = this;
 
             self.ofertaBudowlanaImageList = ko.observableArray([
-                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/pospolka_195x145.jpg")', '@Url.Content("~/Images/kruszywa/pospolka.jpg")', 'pospółka', 'ofertaImage'),
-                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/piasek_kopalniany_195x145.jpg")', '@Url.Content("~/Images/kruszywa/piasek_kopalniany.jpg")', 'piasek kopalniany', 'ofertaImage'),
-                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/piasek_plukany_0-2_195x145.jpg")', '@Url.Content("~/Images/kruszywa/piasek_plukany_0-2.jpg")', 'piasek płukany 0-2', 'ofertaImage'),
-                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/piasek_plukany_05-2_195x145.jpg")', '@Url.Content("~/Images/kruszywa/piasek_plukany_05-2.jpg")', 'piasek płukany 0,5-2', 'ofertaImage'),
-                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/mieszanka_do_betonu_0-16_195x145.jpg")', '@Url.Content("~/Images/kruszywa/mieszanka_do_betonu_0-16.jpg")', 'mieszanka do betonu 0-16', 'ofertaImage'),
-                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/zwir_2-8_195x145.jpg")', '@Url.Content("~/Images/kruszywa/zwir_2-8.jpg")', 'żwir 2-8', 'ofertaImage'),
-                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/zwir_2-16_195x145.jpg")', '@Url.Content("~/Images/kruszywa/zwir_2-16.jpg")', 'żwir 2-16', 'ofertaImage'),
-                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/zwir_8-16_195x145.jpg")', '@Url.Content("~/Images/kruszywa/zwir_8-16.jpg")', 'żwir 8-16', 'ofertaImage'),
-                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/zwir_16-35_195x145.jpg")', '@Url.Content("~/Images/kruszywa/zwir_16-35.jpg")', 'żwir 16-35', 'ofertaImage'),
+                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/pospolka_195x145.jpg")', '@Url.Content("~/Images/kruszywa/pospolka.jpg")', 'pospółka', 'ofertaImage', 'Pospolka'),
+                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/piasek_kopalniany_195x145.jpg")', '@Url.Content("~/Images/kruszywa/piasek_kopalniany.jpg")', 'piasek kopalniany', 'ofertaImage', 'Piasek-Kopalniany'),
+                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/piasek_plukany_0-2_195x145.jpg")', '@Url.Content("~/Images/kruszywa/piasek_plukany_0-2.jpg")', 'piasek płukany 0-2', 'ofertaImage', 'Piasek-Plukany'),
+                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/piasek_plukany_05-2_195x145.jpg")', '@Url.Content("~/Images/kruszywa/piasek_plukany_05-2.jpg")', 'piasek płukany 0,5-2', 'ofertaImage', 'Piasek-Plukany-05-2'),
+                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/mieszanka_do_betonu_0-16_195x145.jpg")', '@Url.Content("~/Images/kruszywa/mieszanka_do_betonu_0-16.jpg")', 'mieszanka do betonu 0-16', 'ofertaImage', 'Mieszanka-do-betonu-0-16'),
+                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/zwir_2-8_195x145.jpg")', '@Url.Content("~/Images/kruszywa/zwir_2-8.jpg")', 'żwir 2-8', 'ofertaImage', 'Zwir-2-8'),
+                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/zwir_2-16_195x145.jpg")', '@Url.Content("~/Images/kruszywa/zwir_2-16.jpg")', 'żwir 2-16', 'ofertaImage', 'Zwir-2-16'),
+                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/zwir_8-16_195x145.jpg")', '@Url.Content("~/Images/kruszywa/zwir_8-16.jpg")', 'żwir 8-16', 'ofertaImage', 'Zwir-8-16'),
+                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/zwir_16-35_195x145.jpg")', '@Url.Content("~/Images/kruszywa/zwir_16-35.jpg")', 'żwir 16-35', 'ofertaImage', 'Zwir-16-35'),
             ]);
 
             self.ofertaDrogowaImageList = ko.observableArray([
-                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/kwarcyt_195x145.jpg")', '@Url.Content("~/Images/kruszywa/kwarcyt.jpg")', 'kwarcyt', 'ofertaImage'),
-                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/dolomit_195x145.jpg")', '@Url.Content("~/Images/kruszywa/dolomit.jpg")', 'dolomit', 'ofertaImage'),
-                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/wapien_195x145.jpg")', '@Url.Content("~/Images/kruszywa/wapien.jpg")', 'wapień', 'ofertaImage'),
+                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/kwarcyt_195x145.jpg")', '@Url.Content("~/Images/kruszywa/kwarcyt.jpg")', 'kwarcyt', 'ofertaImage', 'Kwarcyt'),
+                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/dolomit_195x145.jpg")', '@Url.Content("~/Images/kruszywa/dolomit.jpg")', 'dolomit', 'ofertaImage', 'Dolomit'),
+                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/wapien_195x145.jpg")', '@Url.Content("~/Images/kruszywa/wapien.jpg")', 'wapień', 'ofertaImage', 'Wapien'),
             ]);
 
             self.ofertaOgrodniczaImageList = ko.observableArray([
-                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/zwir_16-32_195x145.jpg")', '@Url.Content("~/Images/kruszywa/zwir_16-32.jpg")', 'żwir 16-32', 'ofertaImage'),
-                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/glazy_195x145.jpg")', '@Url.Content("~/Images/kruszywa/glazy.jpg")', 'głazy', 'ofertaImage'),
-                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/torf_195x145.jpg")', '@Url.Content("~/Images/kruszywa/torf.jpg")', 'torf', 'ofertaImage'),
+                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/zwir_16-32_195x145.jpg")', '@Url.Content("~/Images/kruszywa/zwir_16-32.jpg")', 'żwir 16-32', 'ofertaImage', 'Zwir-16-32'),
+                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/glazy_195x145.jpg")', '@Url.Content("~/Images/kruszywa/glazy.jpg")', 'głazy', 'ofertaImage', 'Glazy'),
+                new GaleriaObrazek('@Url.Content("~/Images/kruszywa/mini/torf_195x145.jpg")', '@Url.Content("~/Images/kruszywa/torf.jpg")', 'torf', 'ofertaImage', 'Torf'),
             
             ]);
 
