--- a/Betotrans/Views/Home/Offer.cshtml
+++ b/Betotrans/Views/Home/Offer.cshtml
@@ -69,7 +69,7 @@
 		</div>
 }
 
-
+@*to pobierac z bazy danych ;)*@
 @section scripts{
     <script type="text/javascript">
         var OfertaImageViewModel = function () {
