--- a/Betotrans/Views/Home/Kruszywo.cshtml
+++ b/Betotrans/Views/Home/Kruszywo.cshtml
@@ -5,23 +5,27 @@
 }
 
 @section body{
+
     <div class="right">
-        <article class="articleText">
+        <article class="tekst">
             <h1 class="ng">@Model.Title</h1>
-                <figure class="articleText" style="float:left">
-                    <a class="fancybox" href="@Url.Content(Model.Img)" title="@Model.Title">
-                        
-                    <img class="agregateImage" style="display:block" src="@Model.MiniImg" alt="@Model.Title" title="@Model.Title"/> 
-                        <!-- <figcaption style="float:left" >Pospółka</figcaption><br /> -->
-                    </a>
-                    
-                </figure>
-                <p class="articleText">
-                    <br />
+            <figure style="float: left">
+                <a class="fancybox" href="@Url.Content(Model.ImgUrl)" title="@Model.Title">
+
+                    <img class="agregateImage" style="display:block" src="@Url.Content(@Model.MiniImgUrl)" alt="@Model.Title" title="@Model.Title"/>
+                    <!-- <figcaption style="float:left" >Pospółka</figcaption><br /> -->
+                </a>
+
+            </figure>
+
+                @*                    <br />
                     <b>Uziarnienie graniczne:</b> @Model.Size<br />
                     <b>Przeznaczenie do:</b> @Model.IntendedFor <br />
-                    <br />
-                    @Model.Description<br />
+                    <br />*@
+            <p style="width:550px;" >
+                <br />
+
+                @Model.Description
                 </p>
         </article>
     </div>
